# intent-classification

./: pyproject.toml
data/: intent.json
src/: csv2json  fill_data.py
