[project]
name = "intent-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "openai>=1.95.0",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
]
